# weixin-agent-sdk

./: .gitignore  README.md  pyproject.toml
examples/: echo_bot.py  openai_bot.py
src/weixin_agent/: __init__.py  api.py  bot.py  media.py  models.py  runtime.py  storage.py
tests/: test_bot.py  test_runtime.py
