[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "weixin-agent-sdk"
version = "0.1.0"
description = "WeChat to AI Agent bridge SDK for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Frost Ming", email = "me@frostming.com" },
]
dependencies = [
  "cryptography>=46.0.0",
  "httpx>=0.28.1",
  "qrcode>=8.2",
]

[project.optional-dependencies]
openai = [
  "openai>=1.109.1",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/weixin_agent"]

[tool.hatch.build.targets.sdist]
include = [
  "src/weixin_agent",
  "examples",
  "tests",
  "README.md",
  "pyproject.toml",
]
